# python-playwright-pytestbdd-template

./: .gitignore  README.md  conftest.py  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: pr-template.md  pull_request_template.md
config/: viewports.json
tests/features/: conftest.py  login.feature
tests/features/apipana/: apipana_mas_info.feature  step_mas_info.py
tests/features/login/: login.feature  step_login.py
tests/features/xxx/: featurexxx.feature
tests/pages/: apipana_init_page.py  base_page.py  login_page.py  nosotros_page.py
tests/steps/: conftest.py  step_login.py
tests/test_data/: dev_env_data.json  test_env_data.json  test_env_data.yaml
utils/: load_json_datas.py
